# barebones

./: hello.py  pyproject.toml
