[project]
name = "barebones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.uv.sources]
ml = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/ml/nlp/transformers/pytorch",
    
    ]
# exclude = ["packages/seeds"]/